fixed better responsiveness on smaller screens

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -67,17 +67,23 @@
   }
 }
 
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1100px) {
   #map {
-		display: none
+		display: inline-block;
+		width: 100%;
+		height: 0%;
 	}
 	#list {
-		width: 100%
+		display: inline-block;
+		width: 100%;
 	}
 }
 
 @media screen and (max-width: 580px) {
 	#icons {
+		display: none
+	}
+	#radar {
 		display: none
 	}
 }
